<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="12dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RegistroActivity">

        <TextView
            android:id="@+id/TV_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ET_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number" />

        <EditText
            android:id="@+id/ET_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/ET_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/clave"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ET_rep_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:ems="10"
            android:hint="@string/rep_clave"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/TV_fecha_nacimiento_lb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nacimiento_lb"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TV_fecha_nacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fecha_nacimiento"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/IB_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@android:color/background_dark"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <TextView
            android:id="@+id/TV_cuidad_de_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuidad_nacimiento"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/SP_cuidad_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lista_cuidades" />

        <TextView
            android:id="@+id/TV_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textAlignment="viewStart"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/RB_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/RB_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino" />
        </RadioGroup>

        <TextView
            android:id="@+id/TV_cosas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pasatiempos"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/CB_cine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cine" />

            <CheckBox
                android:id="@+id/CB_ps4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pss" />

            <CheckBox
                android:id="@+id/CB_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/series" />
        </LinearLayout>

        <Button
            android:id="@+id/BT_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:text="@string/guardar"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/TV_imprimir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>